Photo: File storage, Update models and routes, add 2 routes
